# ArenaBuilder

./: .gitignore  CMakeLists.txt  Makefile
Assets/: CMakeLists.txt
Assets/Shaders/: Unlit.frag  Unlit3D.vert
CMake/Modules/: FindSDL2.cmake  Findlibzip.cmake
CMake/Toolchains/: x86_64-w64-mingw32-gcc.cmake
Conan/: conanfile-linux.txt  conanfile-windows.txt
Source/: CMakeLists.txt
Source/Client/: CMakeLists.txt  Client.cpp  Client.h  Main.cpp  RenderWindow.cpp  RenderWindow.h
Source/Client/Platform/Windows/: System.cpp
Source/Core/: CMakeLists.txt  CommandLine.cpp  Debug.cpp  ServiceProvider.cpp
Source/Core/IO/: Base.cpp
Source/Core/IO/Codec/: Zip.cpp
Source/Core/Include/Core/: CommandLine.h  CompilerDefs.h  Debug.h  Encoding.h  GameDefs.h  Mutex.h  ServiceProvider.h  StringUtils.h  System.h  Types.h
Source/Core/Include/Core/IO/: Base.h
Source/Core/Include/Core/IO/Codec/: Zip.h
Source/Core/Include/Core/Math/: Vec.h
Source/Core/Platform/Unix/: Mutex.cpp  System.cpp
Source/Core/Platform/Windows/: Encoding.cpp  Mutex.cpp  System.cpp
Source/Core/Platform/Windows/Gui/: System.cpp
Source/Game/: CMakeLists.txt
Source/Game/Include/Game/: GameDefs.h
Source/Render/: CMakeLists.txt
Source/Render/GL/: System.cpp  Version.h.in
Source/Render/Include/Render/: System.h
Source/Render/Include/Render/GL/: Loader.h
code/: Cargo.toml
code/arena-builder/: Cargo.toml
code/arena-builder/src/: data.rs  error.rs  macros.rs  main.rs  playground.rs  system.rs
code/arena-builder/src/render/: mod.rs  shaders.rs  window.rs
code/gl/: Cargo.toml  build.rs
code/gl/src/: lib.rs
data/: data.mk
data/shaders/glsl-1.30/: unlit.frag  unlit.vert
tools/: pk3.py
